examples/misc/error/compilation/eval_wdt_unit.bfml
// 式を直接書くとき、その値は unit になることが必須

();;

1

let main = []